[gd_scene load_steps=3 format=3 uid="uid://d7k4v8n2m1x9s"]

[ext_resource type="Script" path="res://scripts/core/LevelDoor.gd" id="1_5m8kx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(120, 140)

[node name="LevelDoor" type="Area2D"]
collision_layer = 0
collision_mask = 1
script = ExtResource("1_5m8kx")

[node name="DoorSprite" type="ColorRect" parent="."]
offset_left = -40.0
offset_top = -120.0
offset_right = 40.0
color = Color(0.3, 0.2, 0.1, 1)

[node name="DoorGlow" type="ColorRect" parent="."]
offset_left = -50.0
offset_top = -130.0
offset_right = 50.0
offset_bottom = 10.0
color = Color(0.2, 0.6, 0.8, 0.3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -70)
shape = SubResource("RectangleShape2D_1")

[node name="LevelNameLabel" type="Label" parent="."]
offset_left = -100.0
offset_top = -160.0
offset_right = 100.0
offset_bottom = -130.0
text = "Next Level"
horizontal_alignment = 1

[node name="InteractionPrompt" type="Label" parent="."]
offset_left = -80.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 30.0
text = "Press E to Enter"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]